--- a/ComeniusCarrousel/App_Code/LeerlingRepo.cshtml
+++ b/ComeniusCarrousel/App_Code/LeerlingRepo.cshtml
@@ -207,7 +207,7 @@
                 var token = WebSecurity.CreateAccount(mail, wachtwoord, false);
                 var dataId = db.QuerySingle("SELECT UserId FROM UserProfile WHERE LOWER(UserName) = LOWER(@0)", mail);
                 db2.Execute("INSERT INTO Gebruiker (Voornaam, Achternaam, UserId) VALUES (@0,@1,@2)",voornaam, achternaam, dataId.UserId);
-                db2.Execute("INSERT INTO Leerling (UserId, KlasId, Niveau, Leerlingnummer, InstroomLeerling, TalentstroomVak, Aangemeld ) VALUES (@0,@1,@2,@3,@4,@5,@6)",dataId.UserId, klasId, niveau.ToUpper(), leerlingnummer, instroomleerling, vak, niveau.ToLower == "vwo"? "True":"False");
+                db2.Execute("INSERT INTO Leerling (UserId, KlasId, Niveau, Leerlingnummer, InstroomLeerling, TalentstroomVak, Aangemeld ) VALUES (@0,@1,@2,@3,@4,@5,@6)",dataId.UserId, klasId, niveau.ToUpper(), leerlingnummer, instroomleerling, vak, niveau.ToLower() == "vwo"? "True":"False");
                 Roles.AddUserToRole(mail, "Leerling");
                 if (niveau.ToLower() == "vwo")
                 {
