--- a/ComeniusCarrousel/Decaan/Mail/MailVerzenden.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailVerzenden.cshtml
@@ -39,7 +39,11 @@
         {
             var db = Database.Open(App.AuthDataBase);
             var db2 = Database.Open(App.DataBase);
-
+            bool verstuurAan = false;
+            
+            foreach(user x in UserProfile){
+                
+            }
 
             /*var user = db.QuerySingle("SELECT UserName FROM UserProfile WHERE LOWER(UserName) = LOWER(@0)", userName);
             if(user == null)
