--- a/ComeniusCarrousel/About.cshtml
+++ b/ComeniusCarrousel/About.cshtml
@@ -1,6 +1,6 @@
 ﻿@*
     Permissies: ~
-    Te berijken van: _Layout
+    Te bereiken van: _Layout
     Roept aan: Leerling/_LeerlingDetails
     Linkt door naar: ~
     Beschrijving: Een kleine beschrijving van de site
