--- a/ComeniusCarrousel/Admin/Decaan/DecaanOverzicht.cshtml
+++ b/ComeniusCarrousel/Admin/Decaan/DecaanOverzicht.cshtml
@@ -1,6 +1,6 @@
 ﻿@*
     Permissies: Admin
-    Te berijken van: _Layout
+    Te bereiken van: _Layout
     Linkt door naar: Admin/Decaan/DecaanToevoegen, Admin/Decaan/DecaanWijzigen?id=[ID]
     Beschrijving: Geeft een overzicht van alle decanen
 *@
