--- a/ComeniusCarrousel/Admin/Decaan/DecaanToevoegen.cshtml
+++ b/ComeniusCarrousel/Admin/Decaan/DecaanToevoegen.cshtml
@@ -1,6 +1,6 @@
 ﻿@*
     Permissies: Admin
-    Te berijken van: Admin/Decaan/DecaanOverzicht
+    Te bereiken van: Admin/Decaan/DecaanOverzicht
     Linkt door naar: Admin/Decaan/DecaanOverzicht
     Beschrijving: Vraagt om een mail en wachtwoord en voegt hiermee een gebruiker toe aan de database met decaan permissies
 *@
