--- a/ComeniusCarrousel/Admin/Decaan/DecaanWijzigen.cshtml
+++ b/ComeniusCarrousel/Admin/Decaan/DecaanWijzigen.cshtml
@@ -1,6 +1,6 @@
 ﻿@*
     Permissies: Admin
-    Te berijken van: Admin/Decaan/DecaanOverzicht
+    Te bereiken van: Admin/Decaan/DecaanOverzicht
     Linkt door naar: Admin/Decaan/DecaanOverzicht
     Beschrijving: Verwijdert een decaan
 *@
