--- a/ComeniusCarrousel/Admin/Leerling/LeerlingWijzigen.cshtml
+++ b/ComeniusCarrousel/Admin/Leerling/LeerlingWijzigen.cshtml
@@ -1,6 +1,6 @@
 ﻿@*
     Permissies: Admin
-    Te berijken van: Default(Decaan/_Decaan)
+    Te bereiken van: Default(Decaan/_Decaan)
     Linkt door naar: Default
     Beschrijving: Verwijdert een leerling
 *@
