--- a/ComeniusCarrousel/Admin/Leerling/LeerlingenToevoegen.cshtml
+++ b/ComeniusCarrousel/Admin/Leerling/LeerlingenToevoegen.cshtml
@@ -1,8 +1,8 @@
 ﻿@*
     Permissies: Admin
-    Te berijken van: Default(Decaan/_Decaan)
+    Te bereiken van: Default(Decaan/_Decaan)
     Linkt door naar: ~
-    Beschrijving: Geeft een text veldt om leerling details in te verwerken omgebruikers toe te voegen aan de database met leerling permissies
+    Beschrijving: Geeft een tekstveld om leerling details in te verwerken om gebruikers toe te voegen aan de database met leerling permissies
         leerlingen worden ingevuld in gegeven volgorde met: 
         Voornaam|Achternaam|Leerlingnummer|Mail|Wachtwoord|Klas|Niveau|Talentstroom vak|Instroomleerling(True/False)
 *@
