--- a/ComeniusCarrousel/Decaan/Klas/KlasToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Klas/KlasToevoegen.cshtml
@@ -1,8 +1,8 @@
 ﻿@*
     Permissies: Admin
-    Te berijken van: Decaan/Klas/KlasOverzicht
+    Te bereiken van: Decaan/Klas/KlasOverzicht
     Linkt door naar: Decaan/Klas/KlasOverzicht
-    Beschrijving: Vraagt om een klasNaam en voegt hiermee een klas toe aan de database
+    Beschrijving: Vraagt om een klasnaam en voegt hiermee een klas toe aan de database
 *@
 @{
     Layout = "~/_Layout.cshtml";
