--- a/ComeniusCarrousel/Decaan/Klas/KlasWijzigen.cshtml
+++ b/ComeniusCarrousel/Decaan/Klas/KlasWijzigen.cshtml
@@ -1,6 +1,6 @@
 ﻿@*
     Permissies: Admin
-    Te berijken van: Decaan/Klas/KlasOverzicht
+    Te bereiken van: Decaan/Klas/KlasOverzicht
     Linkt door naar: Decaan/Klas/KlasOverzicht
     Beschrijving: Verwijdert een klas en alle leerlingen er in
 *@
