--- a/ComeniusCarrousel/Decaan/LeerlingDetails.cshtml
+++ b/ComeniusCarrousel/Decaan/LeerlingDetails.cshtml
@@ -1,6 +1,6 @@
 ﻿@*
     Permissies: Admin, Decaan(gedeeltelijk)
-    Te berijken van: Default(Decaan/_Decaan)
+    Te bereiken van: Default(Decaan/_Decaan)
     Roept aan: Leerling/_LeerlingDetails
     Linkt door naar: [Alleen admin]: Admin/Leerling/LeerlingWijzigen?id=[ID]
     Beschrijving: Geeft de details van een leerling weer
