--- a/ComeniusCarrousel/Decaan/Leraar/LeraarToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Leraar/LeraarToevoegen.cshtml
@@ -1,6 +1,6 @@
 ﻿@*
     Permissies: Admin, Decaan
-    Te berijken van: Decaan/Leraar/LeraarOverzicht
+    Te bereiken van: Decaan/Leraar/LeraarOverzicht
     Linkt door naar: Decaan/Leraar/LeraarOverzicht
     Beschrijving: Vraagt om een mail, voornaam, achternaam en wachtwoord en voegt hiermee een gebruiker toe aan de database met leraar permissies
 *@
