--- a/ComeniusCarrousel/Decaan/Leraar/LeraarWijzigen.cshtml
+++ b/ComeniusCarrousel/Decaan/Leraar/LeraarWijzigen.cshtml
@@ -1,6 +1,6 @@
 ﻿@*
     Permissies: Admin, Decaan
-    Te berijken van: Decaan/Leraar/LeraarOverzicht
+    Te bereiken van: Decaan/Leraar/LeraarOverzicht
     Linkt door naar: Decaan/Leraar/LeraarOverzicht
     Beschrijving: Verwijdert een leraar
 *@
