--- a/ComeniusCarrousel/Decaan/Lokaal/LokaalWijzigen.cshtml
+++ b/ComeniusCarrousel/Decaan/Lokaal/LokaalWijzigen.cshtml
@@ -1,6 +1,6 @@
 ﻿@*
     Permissies: Admin, Decaan
-    Te berijken van: Decaan/Lokaal/LokaalOverzicht
+    Te bereiken van: Decaan/Lokaal/LokaalOverzicht
     Linkt door naar: Decaan/Lokaal/LokaalOverzicht
     Beschrijving: Verwijdert een lokaal
 *@
