--- a/ComeniusCarrousel/Decaan/Vak/VakToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Vak/VakToevoegen.cshtml
@@ -1,6 +1,6 @@
 ﻿@*
     Permissies: Admin, Decaan
-    Te berijken van: Decaan/Vak/VakOverzicht
+    Te bereiken van: Decaan/Vak/VakOverzicht
     Linkt door naar: Decaan/Vak/VakOverzicht
     Beschrijving: Vraagt om een vaknaam en niveau en voegt hiermee een vak toe aan de database
 *@
