--- a/ComeniusCarrousel/Decaan/Voorlichting/VoorlichtingOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Voorlichting/VoorlichtingOverzicht.cshtml
@@ -1,6 +1,6 @@
 ﻿@*
     Permissies: Admin, Decaan
-    Te berijken van: _Layout
+    Te bereiken van: _Layout
     Linkt door naar: Decaan/Voorlichting/VoorlichtingToevoegen, Decaan/Voorlichting/VoorlichtingWijzigen?id=[ID]
     Beschrijving: Geeft een overzicht van alle voorlichtingen
 *@
