--- a/ComeniusCarrousel/Decaan/Voorlichting/VoorlichtingToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Voorlichting/VoorlichtingToevoegen.cshtml
@@ -1,6 +1,6 @@
 ﻿@*
     Permissies: Admin, Decaan
-    Te berijken van: Decaan/Voorlichting/VoorlichtingOverzicht
+    Te bereiken van: Decaan/Voorlichting/VoorlichtingOverzicht
     Linkt door naar: Decaan/Voorlichting/VoorlichtingOverzicht
     Beschrijving: Vraagt om een vak, lokaal, leraar, niveau en tijdstrip en voegt hiermee een voorlichting toe aan de database
 *@
