--- a/ComeniusCarrousel/Default.cshtml
+++ b/ComeniusCarrousel/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿@*
     Permissies: ~
-    Te berijken van: _Layout, standaard verwijzing pagina
+    Te bereiken van: _Layout, standaard verwijzing pagina
     Roept aan: [Aleen oningelogd]: _AboutDetails, [Alleen leerling]: Leerling/_Leerling, [Alleen leraar]: Leraar/_Leraar, [Alleen admin/decaan] Decaan/_Decaan
     Linkt door naar: ~
     Beschrijving: Standaard pagina voor alle gebruikers
