--- a/ComeniusCarrousel/Rooster.cshtml
+++ b/ComeniusCarrousel/Rooster.cshtml
@@ -1,6 +1,6 @@
 ﻿@*
     Permissies: Admin, Decaan, Leraar
-    Te berijken van: [Alleen Leraar]: Default(Leraar/_Leraar), [Alleen Admin, Decaan]: Default(Decaan/_Decaan)
+    Te bereiken van: [Alleen Leraar]: Default(Leraar/_Leraar), [Alleen Admin, Decaan]: Default(Decaan/_Decaan)
     Linkt door naar: ~
     Beschrijving: Volledig rooster met alle voorlichtingen en leerlingen die hiervoor aangemeld zijn
 *@
