--- a/ComeniusCarrousel/Decaan/Leraar/LeraarOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Leraar/LeraarOverzicht.cshtml
@@ -1,6 +1,6 @@
 ﻿@*
     Permissies: Admin, Decaan
-    Te berijken van: _Layout
+    Te bereiken van: _Layout
     Linkt door naar: Decaan/Leraar/LeraarToevoegen, Decaan/Leraar/LeraarWijzigen?id=[ID]
     Beschrijving: Geeft een overzicht van alle leraren
 *@
