--- a/ComeniusCarrousel/Decaan/Lokaal/LokaalOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Lokaal/LokaalOverzicht.cshtml
@@ -1,6 +1,6 @@
 ﻿@*
     Permissies: Admin, Decaan
-    Te berijken van: _Layout
+    Te bereiken van: _Layout
     Linkt door naar: Decaan/Lokaal/LokaalToevoegen, Decaan/Lokaal/LokaalWijzigen?id=[ID]
     Beschrijving: Geeft een overzicht van alle lokalen
 *@
