--- a/ComeniusCarrousel/Decaan/Lokaal/LokaalToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Lokaal/LokaalToevoegen.cshtml
@@ -1,6 +1,6 @@
 ﻿@*
     Permissies: Admin, Decaan
-    Te berijken van: Decaan/Lokaal/LokaalOverzicht
+    Te bereiken van: Decaan/Lokaal/LokaalOverzicht
     Linkt door naar: Decaan/Lokaal/LokaalOverzicht
     Beschrijving: Vraagt om een lokaalnaam en capaciteit en voegt hiermee een lokaal toe aan de database
 *@
