--- a/ComeniusCarrousel/Decaan/Vak/VakOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Vak/VakOverzicht.cshtml
@@ -1,6 +1,6 @@
 ﻿@*
     Permissies: Admin, Decaan
-    Te berijken van: _Layout
+    Te bereiken van: _Layout
     Linkt door naar: Decaan/Vak/VakToevoegen, Decaan/Vak/VakWijzigen?id=[ID]
     Beschrijving: Geeft een overzicht van alle vakken
 *@
