--- a/ComeniusCarrousel/Decaan/Vak/VakWijzigen.cshtml
+++ b/ComeniusCarrousel/Decaan/Vak/VakWijzigen.cshtml
@@ -1,6 +1,6 @@
 ﻿@*
     Permissies: Admin, Decaan
-    Te berijken van: Decaan/Vak/VakOverzicht
+    Te bereiken van: Decaan/Vak/VakOverzicht
     Linkt door naar: Decaan/Vak/VakOverzicht
     Beschrijving: Verwijdert een vak
 *@
