--- a/ComeniusCarrousel/Decaan/Voorlichting/VoorlichtingWijzigen.cshtml
+++ b/ComeniusCarrousel/Decaan/Voorlichting/VoorlichtingWijzigen.cshtml
@@ -1,6 +1,6 @@
 ﻿@*
     Permissies: Admin, Decaan
-    Te berijken van: Decaan/Voorlichting/VoorlichtingOverzicht
+    Te bereiken van: Decaan/Voorlichting/VoorlichtingOverzicht
     Linkt door naar: Decaan/Voorlichting/VoorlichtingOverzicht
     Beschrijving: Voegt leerlingen in het rooster toe aan de voorlichting of verwijdert een vak
 *@
