--- a/ComeniusCarrousel/Leerling/EigenRooster.cshtml
+++ b/ComeniusCarrousel/Leerling/EigenRooster.cshtml
@@ -1,6 +1,6 @@
 ﻿@*
     Permissies: Leerling
-    Te berijken van: Default(Leerling/_Leerling)
+    Te bereiken van: Default(Leerling/_Leerling)
     Linkt door naar: ~
     Beschrijving: Geeft alle rooster punten van een leerling
 *@
