--- a/ComeniusCarrousel/Decaan/Voorlichting/VoorlichtingToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Voorlichting/VoorlichtingToevoegen.cshtml
@@ -2,7 +2,7 @@
     Permissies: Admin, Decaan
     Te bereiken van: Decaan/Voorlichting/VoorlichtingOverzicht
     Linkt door naar: Decaan/Voorlichting/VoorlichtingOverzicht
-    Beschrijving: Vraagt om een vak, lokaal, leraar, niveau en tijdstrip en voegt hiermee een voorlichting toe aan de database
+    Beschrijving: Vraagt om een vak, lokaal, leraar, niveau en tijdstip en voegt hiermee een voorlichting toe aan de database
 *@
 @{
     Layout = "~/_Layout.cshtml";
