LeerlingDetails fix voor daan-boi

--- a/ComeniusCarrousel/Decaan/LeerlingDetails.cshtml
+++ b/ComeniusCarrousel/Decaan/LeerlingDetails.cshtml
@@ -15,7 +15,7 @@
     }
 }
 
-@RenderPage("~/Leerling/_LeerlingDetails")
+@RenderPage("~/Leerling/_LeerlingDetails.cshtml")
 
 @if (User.IsInRole("Admin"))
 {
