Mail Redirects toegevoegd

--- a/ComeniusCarrousel/Decaan/Mail/MailWijzigen.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailWijzigen.cshtml
@@ -1,5 +1,11 @@
 ﻿@{
     Layout = "~/_Layout.cshtml";
+
+    
+    if (!User.IsInRole("Admin") && !User.IsInRole("Decaan"))
+    {
+        Response.Redirect("~/");
+    }
     
     var onderwerp = "";
     var inhoud = "";
