--- a/ComeniusCarrousel/Decaan/Mail/MailToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailToevoegen.cshtml
@@ -4,6 +4,12 @@
     Page.Title= "Keuze";
     Layout = "~/_Layout.cshtml";
 
+    
+    if (!User.IsInRole("Admin") && !User.IsInRole("Decaan"))
+    {
+        Response.Redirect("~/");
+    }
+
     var inhoud = "";
     var onderwerp = "";
 
