--- a/ComeniusCarrousel/Decaan/_Decaan.cshtml
+++ b/ComeniusCarrousel/Decaan/_Decaan.cshtml
@@ -17,7 +17,7 @@
         <span class="glyphicon glyphicon-plus"></span>&nbsp; Leerlingen aanmaken
     </a>
 }
-<a class="btn btn-success" href="~/Rooster">
+<a class="btn btn-success" href="~/Rooster.cshtml">
     <span class="glyphicon glyphicon-user"></span>&nbsp; Volledig rooster
 </a>
 </br>
