--- a/ComeniusCarrousel/Leraar/_Leraar.cshtml
+++ b/ComeniusCarrousel/Leraar/_Leraar.cshtml
@@ -15,6 +15,6 @@
 }
 
 <h3>@leraar.Voornaam @leraar.Achternaam (@leraar.UserName): @leraar.VoorlichtingVak</h3><br>
-<a class="btn btn-success" href="~/Rooster">
+<a class="btn btn-success" href="~/Rooster.cshtml">
     <span class="glyphicon glyphicon-user"></span>&nbsp; Volledig rooster
 </a>
