EigenRooster.cshtml opmaak, MailOverzicht.cshtml opmaak & mailrepo aanroep & comment

--- a/ComeniusCarrousel/Decaan/Mail/MailOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailOverzicht.cshtml
@@ -1,46 +1,48 @@
-﻿@{
-    /*Dit is de Mail Overzicht Pagina van de Decaan. Op deze Pagina krijgt de decaan een overzicht te zien van onderwerpen van mails die reeds gemaakt zijn. Ook krijgt de decaan de mogelijkheid om deze mails aan te passen of te verwijderen vanaf deze pagina, naast dat er een redirect knop is richting een pagina om een nieuw e-mail ontwerp te maken voor een ander onderwerp.*/
-
-
+﻿@* 
+    Permissies: Admin, Decaan
+    Te bereiken van: _Layout
+    Linkt door naar: Decaan/Mail/MailToevoegen, Decaan/Mail/MailVerzenden?MailId=[ID], Decaan/Mail/MailWijzigen?MailId=[ID], Decaan/Mail/MailGegevens
+    Beschrijving: Geeft een overzicht van alle (niet-verstuurde) e-mails; geeft de mogelijk om nieuwe e-mails op te stellen, te wijzigen, te versturen of gegevens te wijzigen
+*@
+@{
     Layout = "~/_Layout.cshtml";
-    // Connectie Database
-    var db = Database.Open("ComeniusCarrousel");
 
-    if (!Request.QueryString["deleteID"].IsEmpty() && Request.QueryString["deleteID"].IsInt()){
-        var deleteID = Request.QueryString["deleteID"];
-        var deleteCommand = "DELETE FROM Mail WHERE ID = @0";
-        db.Execute(deleteCommand, deleteID);
-        Response.Redirect("~/MailOverzicht.cshtml");
+    Page.Title = "E-mail overzicht";
+
+    if (!User.IsInRole("Admin") && !User.IsInRole("Decaan"))
+    {
+        Response.Redirect("~/");
     }
 
-    if (IsPost && Validation.IsValid() && Request.QueryString["ID"].IsInt()){
-        var changeID = Request.QueryString["ID"];
-    }
-
-    var selectCommand = "SELECT * FROM Mail";
-    var selectData = db.Query(selectCommand);
-    var grid = new WebGrid(source: selectData, defaultSort: "Onderwerp");
+    List<MailRepo.Mail> mails = MailRepo.GetMails();
 }
 
-<br>
+<h2>Mail overzicht</h2>
 
-@grid.GetHtml(
-        tableStyle: "grid",
-        headerStyle: "head",
-        alternatingRowStyle: "alt",
-        columns: grid.Columns(
-            grid.Column("Onderwerp"),
-            grid.Column(format: @<a href="~/Decaan/Mail/MailWijzigen?MailId=@item.MailId">&nbsp; Wijzig</a>),
-            grid.Column(format: @<a href="~/Decaan/Mail/MailVerzenden?MailId=@item.MailId">&nbsp; Verzenden</a>)
-        
-        ))
+<a class="btn btn-success" href="~/Decaan/Mail/MailToevoegen.cshtml">
+    <span class="glyphicon glyphicon-plus"></span>&nbsp; Nieuwe E-mail
+</a>
 
-        <p> <a class="btn btn-default" href="~/Decaan/Mail/MailToevoegen.cshtml">
-            <span class="glyphicon glyphicon-pencil"></span> Nieuwe Mail
-            </a>
-        </p>
 
-        <p> <a class="btn btn-default" href="~/Decaan/Mail/MailGegevens.cshtml">
-            <span class="glyphicon glyphicon-pencil"></span> Mail Account Gegevens
-            </a>
-        </p>
+<a class="btn btn-default" href="~/Decaan/Mail/MailGegevens.cshtml">
+    <span class="glyphicon glyphicon-wrench"></span>&nbsp; E-mail Account Gegevens
+</a>
+
+
+<table class="table" style="margin-top: 16px;">
+    <thead>
+    <tr>
+        <th colspan="3">Onderwerp</th>
+    </tr>
+    </thead>
+    <tbody>
+        @foreach (MailRepo.Mail mail in mails)
+        {
+        <tr>
+            <td>@mail.Onderwerp</td>
+            <td><a href="~/Decaan/Mail/MailWijzigen?MailId=@mail.MailId">Wijzig</a></td>
+            <td><a href="~/Decaan/Mail/MailVerzenden?MailId=@mail.MailId">Verzenden</a></td>
+        </tr>
+        }
+    </tbody>
+</table>
