--- a/ComeniusCarrousel/Leerling/EigenRooster.cshtml
+++ b/ComeniusCarrousel/Leerling/EigenRooster.cshtml
@@ -18,7 +18,26 @@
     List<VoorlichtingRepo.Voorlichting> voorlichtingen = VoorlichtingRepo.GetStudentRooster(id);
 }
 
-@foreach (VoorlichtingRepo.Voorlichting voorlichting in voorlichtingen)
-{
-    <span><b>@voorlichting.Vak</b> (<b>@voorlichting.Niveau</b>) van <b>@voorlichting.Leraar</b> op datum: <b>@string.Format("{0:d/M/yyyy}", voorlichting.DateTime)</b> om tijdstip: <b>@string.Format("{0:HH:mm}", voorlichting.DateTime)</b> in lokaal <b>@voorlichting.Lokaal</b>.</span>
-}
+<h2>Voorlichtingenrooster</h2>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>Vak</th>
+            <th>Leraar</th>
+            <th>Datum</th>
+            <th>Lokaal</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (VoorlichtingRepo.Voorlichting voorlichting in voorlichtingen)
+        {
+            <tr>
+                <td>@voorlichting.Vak (@voorlichting.Niveau)</td>
+                <td>@voorlichting.Leraar</td>
+                <td>@string.Format("{0:d/M/yyyy HH:mm}", voorlichting.DateTime)</td>
+                <td>@voorlichting.Lokaal</td>
+            </tr>
+        }
+    </tbody>
+</table>
