--- a/ComeniusCarrousel/Decaan/Mail/MailToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailToevoegen.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     //Deze pagina is bedoeld om nieuwe mails te maken voor bepaalde onderwerpen (Verzenden Userdata, Reminder voor aanmelden, Verzenden Persoonlijk Rooster). De gemaakte mails zullen verschijnen in de Mail Database en opgehaald worden in MailOverzicht.cshtml, waar ze ook gewijzigd kunnen worden. Ze zullen uiteindelijk op de verzend pagina verzonden kunnen worden aan de juiste doelgroep.
-    
-    Page.Title= "Keuze";
+
     Layout = "~/_Layout.cshtml";
+    Page.Title = "Mail toevoegen";
 
     
     if (!User.IsInRole("Admin") && !User.IsInRole("Decaan"))
@@ -10,10 +10,7 @@
         Response.Redirect("~/");
     }
 
-    var inhoud = "";
-    var onderwerp = "";
-
-    Validation.RequireField("onderwerp", "Je moet een onderwerp aan de mail even");
+    /*Validation.RequireField("onderwerp", "Je moet een onderwerp aan de mail even");
     Validation.RequireField("inhoud", "Er moet een inhoud zijn");
     Validation.Add("onderwerp",
         Validator.StringLength(
@@ -23,47 +20,42 @@
     Validation.Add("inhoud",
         Validator.StringLength(
             maxLength: 4000,
-            errorMessage: "Your email cannot contain more than 4000 characters"));
+            errorMessage: "Your email cannot contain more than 4000 characters"));*/
 
-    if(IsPost)
+    if (IsPost && Request.Form["MailToevoegen"] != null)
     {
-        inhoud = Request.Form["inhoud"];
-        onderwerp = Request.Form["onderwerp"];
+        string onderwerp = "";
+        string inhoud = "";
+        Validation.RequireField("onderwerp", "Geef de mail een onderwerp");
+        Validation.RequireField("inhoud", "De Mail heeft een inhoud nodig");
 
+        if(Request.Form["onderwerp"] != null) {onderwerp = Request.Form["onderwerp"];}
+        if(Request.Form["inhoud"] != null) {inhoud = Request.Form["inhoud"];}
+    
         if(Validation.IsValid())
         {
-            var db = Database.Open("ComeniusCarrousel");
-
-            var bestaandOnderwerp  = db.QuerySingle("SELECT Onderwerp FROM Mail WHERE LOWER(Onderwerp) = LOWER(@0)", onderwerp);
-            if(bestaandOnderwerp == null)
-            {
-                db.Execute("INSERT INTO Mail (Inhoud, Onderwerp) VALUES (@0, @1)", inhoud, onderwerp);
-
-            }
-            else
-            {
-                ModelState.AddFormError("Onderwerp wordt al gebruikt");
-            }
-            db.Close();
-            Response.Redirect("~/Decaan/Mail/MailOverzicht.cshtml");
+            MailRepo.MakeMail(inhoud, onderwerp);
+            Response.Redirect("~/Decaan/Mail/MailOverzicht");
         }
     }
 }
 
-<h4>Nieuwe Mail</h4>
-<form method="post" class="form-inline">
-    <div>
-        <label for="onderwerp">Onderwerp</label>
-        <input type="text" id="onderwerp" name="onderwerp" value="@onderwerp">
-        @Html.ValidationMessage("onderwerp")           
-    </div>
-    <div>
-        <label for="inhoud">Inhoud</label>
-        <input type="text" id="inhoud" name="inhoud" value="@inhoud">
-        @Html.ValidationMessage("inhoud")          
-    </div>
-    
-    <button type="submit" id="submit" name="submitNewMail" class="btn btn-success">
-        <span class="glyphicon glyphicon-plus"></span> Submit
-    </button>
-</form>
+<h2>Nieuw mail concept aanmaken</h2>
+
+<div class="col-md-12">
+    <form method="post">
+        @Html.ValidationSummary()
+        <div class="form-group">
+            <label for="onderwerp">Onderwerp</label>
+            <input class="form-control" type="text" name="onderwerp">
+        </div>
+        <div class="form-group">
+            <label for="inhoud">Inhoud</label>
+            <input class="form-control" type="text" name="inhoud">
+        </div>
+
+        <button type="submit" id="submit" name="mailToevoegen" class="btn btn-success" style="float: right;">
+            <span class="glyphicon glyphicon-plus"></span>&nbsp; Toevoegen
+        </button>
+    </form>
+</div>
