--- a/ComeniusCarrousel/App_Code/VakRepo.cshtml
+++ b/ComeniusCarrousel/App_Code/VakRepo.cshtml
@@ -55,6 +55,7 @@
         return vakken;
     }
 
+    // geeft alle distincte vaknamen terug
     public static List<string> GetDistinctVakken()
     {
         List<string> vakken = new List<string>();
