--- a/ComeniusCarrousel/Decaan/_Decaan.cshtml
+++ b/ComeniusCarrousel/Decaan/_Decaan.cshtml
@@ -46,7 +46,7 @@
                 <td>
                 @foreach (Tuple<string,int> vak in leerling.KeuzeVakken())
                 {
-                    <span>@vak.Item1</span>
+                    @vak.Item1<br>
                 }
                 </td>
                 <td>
