--- a/ComeniusCarrousel/Decaan/Mail/MailToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailToevoegen.cshtml
@@ -51,7 +51,9 @@
         </div>
         <div class="form-group">
             <label for="inhoud">Inhoud</label>
-            <input class="form-control" type="text" name="inhoud">
+            <textarea style="width: 100%; resize: none; padding: 0px" name="inhoud" class="form-control" rows="20"
+                  placeholder="Inhoud"
+                  maxlength="4000"></textarea>
         </div>
 
         <button type="submit" id="submit" name="mailToevoegen" class="btn btn-success" style="float: right;">
