--- a/ComeniusCarrousel/User_Management/Login.cshtml
+++ b/ComeniusCarrousel/User_Management/Login.cshtml
@@ -1,4 +1,10 @@
-﻿@{
+﻿@*
+    Permissies: ~
+    Wordt aangeroepen in: _Layout
+    Linkt door naar: Default
+    Beschrijving: Het inloggen voor alle gebruikers
+*@
+@{
     Layout = "~/_Layout.cshtml";
     Page.Title = "Login";
     
