--- a/ComeniusCarrousel/User_Management/Logout.cshtml
+++ b/ComeniusCarrousel/User_Management/Logout.cshtml
@@ -1,4 +1,10 @@
-﻿@{
+﻿@*
+    Permissies: ~
+    Wordt aangeroepen in: _Layout
+    Linkt door naar: Default
+    Beschrijving: Het uitloggen van een gebruiker
+*@
+@{
     if(!Request.QueryString["ReturnUrl"].IsEmpty())
     {
 
