--- a/ComeniusCarrousel/Admin/Decaan/DecaanOverzicht.cshtml
+++ b/ComeniusCarrousel/Admin/Decaan/DecaanOverzicht.cshtml
@@ -21,7 +21,10 @@
 <a class="btn btn-success" href="~/Admin/Decaan/DecaanToevoegen">
     <span class="glyphicon glyphicon-plus"></span>&nbsp; Nieuwe decaan aanmaken
 </a>
-
+</br>
+<div class="input-group" id="floatRight">
+    <input type="text" class="form-control" id="search" placeholder="Gegevens zoeken" style="margin: 4px 4px 4px 4px;">
+</div>
 <table class="table" style="margin-top: 16px;">
     <thead>
         <tr>
@@ -29,7 +32,7 @@
             <th>Details</th>
         </tr>
     </thead>
-    <tbody>
+    <tbody id="table">
         @foreach (Tuple<int, string> decaan in decanen)
         {
         <tr>  
