Bug fix in Mailoverzicht

--- a/ComeniusCarrousel/Decaan/Mail/MailOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailOverzicht.cshtml
@@ -23,10 +23,11 @@
     <span class="glyphicon glyphicon-plus"></span>&nbsp; Nieuwe E-mail
 </a>
 
+<!-- Mogelijk handig om te gebruiken wanneer er verschillende mails (accountgegevens) aan meerdere gebruikers verstuurd moeten worden
 
 <a class="btn btn-default" href="~/Decaan/Mail/MailGegevens.cshtml">
     <span class="glyphicon glyphicon-wrench"></span>&nbsp; E-mail Account Gegevens
-</a>
+</a>-->
 
 </br>
 <div class="input-group" id="floatRight">
