--- a/ComeniusCarrousel/Leerling/Keuze.cshtml
+++ b/ComeniusCarrousel/Leerling/Keuze.cshtml
@@ -17,11 +17,6 @@
     int id = WebSecurity.CurrentUserId;
     LeerlingRepo.Leerling leerling = LeerlingRepo.GetLeerling(id);
 
-    if (leerling.Niveau.ToLower() != "havo")
-    {
-        Response.Redirect("~/");
-    }
-
     List<VakRepo.Vak> vakken = VakRepo.GetVakken(leerling.Niveau, leerling.TalentstroomVak); // Haalt alle vakken van het niveau van de leerling, minus zijn talenstroom vak.
     int error = 0;
     
@@ -142,8 +137,26 @@
         @for(int i = 0; i < keuzeVakken.Length; i++) // Geeft het aantal keuzes
         {
             <tr>
-                <td>
-                    <select name="keuzevak_@i" class="form-control">
+                @if (leerling.Niveau.ToLower() != "havo")
+                {
+                    if (keuzeVakken[i] != -1)
+                    {
+                        <td>
+                            <input type="hidden" name="keuzevak_@i" value="@keuzeVakken[i]">
+                            @vakken.Where(vak => vak.VakId == keuzeVakken[i]).First().VakNaam
+                        </td>
+                    }
+                    else
+                    {
+                        <td hidden>
+                            <input type="hidden" name="keuzevak_@i" value="-">
+                        </td>
+                    }
+                }
+                else
+                {
+                    <td>
+                        <select name="keuzevak_@i" class="form-control">
                         <option value="-"></option>
                         @foreach(VakRepo.Vak vak in vakken) // maakt een keuzemenu met alle mogelijke vakken
                         {
@@ -157,11 +170,25 @@
                                 <option value="@vak.VakId">@vak.VakNaam</option>
                             }
                         }
-                    </select>
-                </td>
-                <td>
-                    <input type="number" name="aantalMensen_@i" min="1" max="3" value="1" class="form-control">
-                </td>
+                        </select>
+                    </td>
+                }
+                @if (leerling.Niveau.ToLower() != "havo")
+                {
+                    if (keuzeVakken[i] != -1)
+                    {
+                        <td>
+                    
+                            <input type="number" name="aantalMensen_@i" min="1" max="3" value="1" class="form-control">
+                        </td>
+                    }
+                }
+                else
+                {
+                    <td>
+                        <input type="number" name="aantalMensen_@i" min="1" max="3" value="1" class="form-control">
+                    </td>
+                }
             </tr>
         }
     </table>
